# adkagents

./: .gitignore  README.md  idx-template.json  idx-template.nix  pyproject.toml  requirements.txt
.idx/: dev.nix
00-adk-intro copy/adk00_template/: agent.py
00-adk-intro copy/adk01-vais-rag/: agent.py
00-adk-intro copy/adk02-integration-connectors/: agent.py
00-adk-intro copy/adk05a-mcp-instavibe/: 1_instavibe_test.py
00-adk-intro copy/adk05b-db-toolbox-mcp/: agent.py
00-adk-intro copy/adk07-multimodal-live/: .env.template
00-adk-intro copy/adk08a-google-docs-toolset-react-planner/: agent.py
00-adk-intro copy/adk09-bigquery-toolset_adc/: agent.py
00-adk-intro copy/adk09-bigquery-toolset_oauth/: agent.py
00-adk-intro copy/adk10-urlcontext/: agent.py
00-adk-intro/adk00-helloworld/: agent.py
00-adk-intro/adk01-vais-rag/: agent.py
00-adk-intro/adk02-integration-connectors/: agent.py
00-adk-intro/adk04-db-toolbox-setup/: Readme.md
00-adk-intro/adk04b-db-toolbox-local/: agent.py
00-adk-intro/adk05-pythonudf-as-tool/: agent.py
00-adk-intro/adk05a-mcp-instavibe/: .env.template  2_run_mcp_server_locally.sh  mcp_server.py
00-adk-intro/adk06-oauth-api/: agent.py
00-adk-intro/adk06a-oauth-integration-connectors/: agent.py
00-adk-intro/adk06b-oauth-from_accesstoken_integration-connectors/: agent.py  readme.md
01-adk-services/adk-services-01-session-cmd/: agent.py
01-adk-services/adk-services-01-session-gradio/: agent.py  ui.py
01-adk-services/adk-services-03-examplestore/: .env.template  01_create_example_store.py  02_play_with_api.py  (+4 more)
(+140 files in other folders)
